--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,17 +11,18 @@ categories = ["network-utilities"]
 readme = "README.md"
 
 [dependencies]
+cfg-if = "1.0"
 chrono = "0.4"
 clap = "~2.33.3"
 core_affinity = "0.5"
 ctrlc = "3.1"
 env_logger = "0.8"
 log = {version = "0.4", features = ["std"]}
-mio = "0.6"
-nix = "0.20"
+mio = {version = "0.8", features = ["os-poll", "net"]}
 serde = {version = "1.0", features = ["derive"]}
 serde_json = "1.0"
 simple-error = "0.2"
+socket2 = "0.5.3"
 uuid = {version = "0.8", features = ["v4"]}
 
 #configuration for cargo-deb
