change test_id type from [u8; 16] to Uuid

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 socket2 = { version = "0.5", features = ["all"] }
 thiserror = "1.0"
-uuid = { version = "1.6", features = ["v4"] }
+uuid = { version = "1.6", features = ["v4", "serde"] }
 
 #configuration for cargo-deb
 #install with "cargo install cargo-deb"
